--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,6 @@ body {
   gap: 1rem;
 }
 
-
 .projectcard {
   background-color: white;
   width: 100%;
@@ -75,7 +74,30 @@ body {
   height: 30rem;
   margin: auto;
   padding: 0;
+  animation: slideout 1s 1 alternate forwards;
 }
+@keyframes slideout {
+  from {
+    transform: translateY(-5rem);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+.projectcard:hover {
+  animation: 1s 1 alternate slidein forwards;
+}
+
+@keyframes slidein {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-5rem);
+  }
+}
+
 .projectcard img {
   width: 100%;
   height: 50%;
@@ -137,31 +159,32 @@ footer {
 }
 
 @media screen and (min-width: 480px) and (max-width: 1000px) {
-    .firstdiv {
-        /* flex-direction: column; */
-        display: block;
-        margin: 0;
-        margin-bottom: 2rem;
-        height: auto;
-        position: relative;
-      }
-    .firstdiv img {
-        height: 40vh;
-        width: 50%;
-        position: relative;
-        float: left;
-        z-index: 2;
-        margin: 0 2rem;
-      }
-    
-      .innerdiv{
-        display: block;
-        margin: 3rem;
-      }
-    .projectdiv {
-      margin: 3rem;
-      gap: 3rem;
-      grid-template-columns: 1fr;
-  
-    }
+  .firstdiv {
+    /* flex-direction: column; */
+    display: block;
+    margin: 0;
+    margin-bottom: 2rem;
+    height: auto;
+    position: relative;
   }
+  .firstdiv img {
+    width: 50%;
+    position: relative;
+    float: left;
+    z-index: 2;
+    margin: 0 2rem;
+  }
+  .firstdiv h1 {
+    font-size: 3rem;
+  }
+
+  .innerdiv {
+    display: block;
+    margin: 3rem;
+  }
+  .projectdiv {
+    margin: 3rem;
+    gap: 3rem;
+    grid-template-columns: 1fr;
+  }
+}
