--- a/styles.css
+++ b/styles.css
@@ -74,29 +74,33 @@ body {
   height: 30rem;
   margin: auto;
   padding: 0;
-  animation: slideout 1s 1 alternate forwards;
+  /* animation: slideout 1s 1 alternate forwards;
+  animation-delay: 1s; */
+  transition: transform 1s .05s ;
+
+
 }
-@keyframes slideout {
+/* @keyframes slideout {
   from {
     transform: translateY(-5rem);
   }
   to {
     transform: translateY(0);
   }
-}
+} */
 
 .projectcard:hover {
-  animation: 1s 1 alternate slidein forwards;
+ transform: translateY(-2rem);
 }
 
-@keyframes slidein {
+/* @keyframes slidein {
   from {
     transform: translateY(0);
   }
   to {
     transform: translateY(-5rem);
   }
-}
+} */
 
 .projectcard img {
   width: 100%;
